--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -6,13 +6,13 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 license = "MIT"
 readme = "README.md"
 edition = "2021"
-homepage = "https://gitlab.com/gridbugs/mos6502.git"
-repository = "https://gitlab.com/gridbugs/mos6502.git"
+homepage = "https://github.com/portal-co/mx6502.git"
+repository = "https://github.com/portal-co/mx6502.git"
 documentation = "https://docs.rs/portal-solutions-mos6502-model"
 
 [features]
 serialize = ["serde"]
 
 [dependencies]
-serde = { version = "1.0", features = ["serde_derive"], optional = true }
+serde = { version = "1.0", features = ["serde_derive","alloc"],default-features = false, optional = true }
 log = "0.4"
