--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "portal-solutions-mos6502-model"
 description = "MOS6502 hardware model"
-version = "0.2.1"
-authors = ["Stephen Sherratt <stephen@sherra.tt>"]
+version = "0.0.0"
+authors = ["Stephen Sherratt <stephen@sherra.tt>","gkgoat"]
 license = "MIT"
 readme = "README.md"
 edition = "2021"
